# forest-resources-dashboard

./: .gitignore  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/app/: config.py  main.py
backend/app/models/: __init__.py  common.py  dynamics.py  land_area.py  ownership.py  timber.py  trends.py
backend/app/routers/: __init__.py  dynamics.py  filters.py  land_area.py  ownership.py  timber.py  trends.py
backend/app/services/: __init__.py  data_loader.py
backend/app/utils/: constants.py
data/: USForestResources_2022_AppendixTables.xlsx
frontend/: netlify.toml  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/dynamics/: page.tsx
frontend/app/land-area/: page.tsx
frontend/app/ownership/: page.tsx
frontend/app/timber/: page.tsx
frontend/app/trends/: page.tsx
frontend/components/charts/: BarChartComponent.tsx  MultiLineChart.tsx  PieChartComponent.tsx  TrendChart.tsx
frontend/components/filters/: FilterSidebar.tsx
frontend/components/maps/: USChoropleth.tsx
frontend/components/ui/: ChartContainer.tsx  DataTable.tsx  MetricCard.tsx
frontend/hooks/: useForestData.ts
frontend/lib/: api.ts  types.ts
